src/css/newDesign.css
.newDesign body {
    background: rgb(163,205,255);
}

/* Agreement === */
.newDesign #content-intro-terms{
    color: #555;
}
.newDesign #content-intro-terms #agreement-accept .x-btn{
    background: #c92d42;
    transition: background .3s ease-out;
}
.newDesign #content-intro-terms #agreement-accept .x-btn-over{
    background: #ad2738;
}
.newDesign #content-intro-terms #agreement-cancel .x-btn{
    background: #aaa;
    transition: background .3s ease-out;
}
.newDesign #content-intro-terms #agreement-cancel .x-btn-over{
    background: #888;
}

.newDesign #agreement-accept-chb input {
    background-image: url('../images/new/unchecked.png');
    height: 15px;
    width: 15px;
}
.newDesign #agreement-accept-chb .x-form-cb-checked input {
    background-image: url('../images/new/checked.png');
}

/* Header === */
.newDesign #wb-header {
    background: #333;
    border-bottom: 1px solid #222;
}
.newDesign #wb-header a {
    background: url('../images/new/world-bank-logo.png') no-repeat center center;
}
.newDesign #header {
    background: #333;
    border-bottom: 2px solid rgb(36, 36, 49);
    padding-left: 5px;
}
.newDesign #header .home {
    left: 15px;
}
.newDesign #header .menu li:before {
    background-color: #888;
}
.newDesign #header a {
    font-family: "Open sans", "arial", sans-serif;
    font-size: 10px;
    color: #ddd;
}
.newDesign #header .menu li a {
    padding: 0 15px;
}
.newDesign #header .user {
    background: #333;
    height: 28px;
    padding-right: 10px;
    position: absolute;
    display: inline-block;
    right: 0;
}
.newDesign #header .user .sep {
    width: 1px;
    background: #888;
    display: inline-block;
    vertical-align: middle;
    height: 15px;
    margin-bottom: 3px;
}
.newDesign #header .user a {
    padding: 0 10px;
}
.newDesign #header .user .login:before, .newDesign #header .user .signup:before {
    display: inline-block;
    width: 15px;
    height: 15px;
    line-height: 15px;
    margin: -3px 5px 0 0;
    padding: 0;
    vertical-align: middle;
}
.newDesign #header .user .login:before {
    content: url("../images/new/login.png");
}
.newDesign #header .user .signup:before {
    content: url("../images/new/signup.png");
}
.newDesign #header .user .login.logged:before, .newDesign #header .user .signup.logged:before {
    content: "";
    margin: 0;
    width: 0;
}

/* login */
.newDesign #loginwindow .x-btn {
    border-right: 1px solid white;
}
.newDesign #loginwindow .x-btn:last-child {
    border-right: 1px solid white;
    background: #aaa;
}
.newDesign #loginwindow .x-btn:last-child:hover {
    background: #888;
}

/* Footer === */
.newDesign #footer {
    z-index: initial;
}
.newDesign #footer-bar {
    border-top: 2px solid #d3d2d2;
}
.newDesign #footer-bar ul li a, .newDesign #footer-legal {
    font-family: "Open sans", "arial", sans-serif;
    color: #555;
}
.newDesign #footer-legal {
    line-height: 15px;
}

/* Intro === */
.newDesign #content-intro, .newDesign #content-intro-guide {
    background-color: rgb(67, 66, 84);
    background-color: rgba(67, 66, 84, .9);
    border: 1px solid #666;
}

.newDesign #content-intro {
    padding: 19px;
    border-left: 0;
    width: 850px;
}
.newDesign #content-intro-guide {
    border-right: 0;
    color: #eee;
    top: auto;
    bottom: 150px;
}

.newDesign #about-urbis h2 {
    margin-top: 15px;
}
.newDesign #content-intro-terms h2,
.newDesign #content-intro-guide h2 {
    border: 0;
}

/* into toolbar */
.newDesign #toolbar {
    background: rgb(67, 66, 84);
    border-bottom: 2px solid rgb(36, 36, 49);
    /*z-index: 99999;*/
}
.newDesign #toolbar > .label {
    margin-top       : 7px;
}
.newDesign .application #toolbar > .label {
    margin-top       : 13px;
}
.newDesign #content-application{
    z-index: initial;
}

/* intro toolbar inputs */
.newDesign #content-intro  .x-form-text, .newDesign #content-intro .x-form-trigger {
    background: rgba(255,255,255,.2);
    border: 1px solid rgba(255,255,255,.3);
    height: 30px;
}
.newDesign #content-intro  .x-form-text {
    border-right-width: 0;
}
.newDesign #content-intro  .x-form-trigger {
    background: rgba(255,255,255,.2) url('../images/new/expand-white.png') no-repeat 50% 50%;
    border-left-width: 0;
}
.newDesign #content-intro .custom-combo .x-form-text {
    border-radius: 1px 0 0 1px;
    color: #ddd;
    font-size: 12px;
    font-weight: 600;
}
.newDesign #content-intro .field > .label {
    font-size: 12px;
    font-weight: 600;
}

/* === Application === */
/* App toolbar === */
.newDesign #toolbar {
    height: 105px;
}
.newDesign .fields-holder > .label {
    width: 290px;
}
.newDesign .fields-holder .field > .label {
    color            : white;
    font-family: "Open Sans", sans-serif;
    font-size: 11px;
    font-weight: 700;
}
.newDesign #toolbar .fields {
    float: left;
    margin-left: 35px;
    margin-top: 4px;
}
.newDesign #toolbar .fields .group {
    width: 200px;
    float: left;
    margin-right: 60px;
    min-height: 90px;
}
.newDesign #toolbar .fields .group.group-visualization {
    width: 380px;
    margin-right: 5px;
}
.newDesign #toolbar .fields .group.group-visualization .label {
    width: 80px;
}
.newDesign #app-toolbar-visualization-save, .newDesign #app-toolbar-visualization-manage {
    height: 23px;
    margin-top: 3px;
}
.newDesign #toolbar .fields .group .field {
    margin: 1px 1px 2px 1px;
}
.newDesign #toolbar .field.level > .label{
    text-align: left;
    padding-right: 1px;
}
.newDesign #toolbar .timeline-labels {
    font-size: 11px;
    padding-left: 2px;
    margin-top: 4px;
    margin-bottom: -7px;
}
.newDesign #toolbar .fields .group .field.help {
    bottom: 0;
    width: 60px;
    margin-left: -120px;
    position: absolute;
}

/* + - */
.newDesign .field.level .widget .button {
    width: 23px;
    height: 23px;
    float: left;
    margin-left: 1px;
    margin-right: 3px;
}
.newDesign .field.level .x-btn .x-btn-inner {
    color: #ddd;
    font-size: 20px;
}
/* ... */

